Make the page shown in the Facebook App an embed rather than the whole Whirled.

--- a/pages/facebook.html
+++ b/pages/facebook.html
@@ -4,32 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Whirled Facebook App</title>
-  <meta name='gwt:module' content='msoy/msoy'/>
-  <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/admin.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/catalog.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/group.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/inventory.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/mail.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/msgs.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/profile.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/swiftly.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/facebook.css" type="text/css"/>
-  <script language="javascript">
-    document.whirledPartner = "facebook";
-  </script>
 </head>
 
 <body>
-  <script language="javascript" src="/msoy/gwt.js"></script>
-  <script src="/js/md5.js" type="text/javascript"></script>
-  <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
-  <table id="ctable" width="100%" cellpadding="0" cellspacing="0" style="padding: 0; margin: 0;">
-  <tr><td valign="top" id="content"></td>
-      <td valign="top" id="client"></td></tr>
-  </table>
-  <!-- TODO: replace this with something fancier (preserve URL) -->
-  <p align="center"><a href="/" target="_top">Full Whirled!</a>
+  <object width='100%' height='575' classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=10,0,0,0' allowScriptAccess='always'>
+    <param name='movie' value='http://www.whirled.com/clients/world-client.swf'/>
+    <param name='wmode' value='opaque'/>
+    <param name='FlashVars' value='sceneId=340&vec=e.whirled.rooms.340&aff=1'/>
+    <embed width='100%' height='575' flashvars='sceneId=340&vec=e.whirled.rooms.340&aff=1' src='http://www.whirled.com/clients/world-client.swf' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed>
+</object><br/>
+  <center><a href="http://www.whirled.com/" target="_top">Launch the full version of Whirled</a></center>
 </body>
 </html>
