Nix the margins since we already have precious little space.

--- a/pages/facebook.html
+++ b/pages/facebook.html
@@ -6,7 +6,7 @@
   <title>Whirled Facebook App</title>
 </head>
 
-<body>
+<body style="margin: 0px; padding: 0px">
   <object width='100%' height='575' classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=10,0,0,0' allowScriptAccess='always'>
     <param name='movie' value='http://www.whirled.com/clients/world-client.swf'/>
     <param name='wmode' value='opaque'/>
