Fix account-edit link.

--- a/rsrc/email/welcome/message.html
+++ b/rsrc/email/welcome/message.html
@@ -145,7 +145,7 @@
             <p>You are receiving this because your email address was used to register at
             <a href="${server_url}">${server_url}</a>.</p>
             <p>
-                <a href="${server_url}#me-account">Unsubscribe from Whirled email</a> |
+                <a href="${server_url}#account-edit">Unsubscribe from Whirled email</a> |
                 <a href="http://wiki.whirled.com/Terms_of_Service">Terms of Service</a> |
                 <a href="http://www.threerings.net/about/privacy.html">Privacy Policy</a>
             </p>
