Let's use /go URLs in all of our emails.

--- a/rsrc/email/postcard/message.html
+++ b/rsrc/email/postcard/message.html
@@ -23,11 +23,11 @@ img {
 </head>
 <body bgcolor="#FFFFFF">
 
-You got a Whirled Postcard from <a href="${server_url}#people-${sender_id}">${sender}</a>:
+You got a Whirled Postcard from <a href="${server_url}go/people-${sender_id}">${sender}</a>:
 
 <br/><br/>
 <table cellpadding="0" cellspacing="5">
-<tr><td align="center"><a href="${server_url}#world-s${scene_id}">${title}</a><br/>
+<tr><td align="center"><a href="${server_url}go/world-s${scene_id}">${title}</a><br/>
 <!-- TODO: fancy postcard border -->
 <img src="${snap_url}" style="max-width: 800px"></td></tr>
 #if (${caption})
