--- a/rsrc/email/wrapper/message.html
+++ b/rsrc/email/wrapper/message.html
@@ -84,7 +84,7 @@ ${content}
 <tr><td>
 <img src="${base_url}images/email/wrap_footer.jpg"></td></tr>
 <tr><td class="wrapFooter" height="39" align="center" valign="center">
-Please <a href="${base_url}#account-optout_%OPTOUTBITS%">click here</a>
+Please <a href="${base_url}go/account-optout_%OPTOUTBITS%">click here</a>
 if you no longer wish to receive announcements from Whirled.
 </td></tr>
 </table>
