--- a/rsrc/email/memberInvite-disabled/message.html
+++ b/rsrc/email/memberInvite-disabled/message.html
@@ -23,11 +23,11 @@ a {
 <table cellpadding="0" cellspacing="0" style="margin: 20px 35px 0px 35px">
 <tr><td width="100%" align="center" style="font-size: 18px; color: #4B718A;">
 #if ($friend)
-      <b>${friend} wants you to join them in Whirled!</b>
+  <b>${friend} wants you to join them in Whirled!</b>
 #else
-      <b>Join us in Whirled!</b>
+  <b>Join us in Whirled!</b>
 #end
-    </td></tr>
+</td></tr>
 
 <tr><td style="padding-top: 15px">
 #if ($name)
@@ -48,7 +48,7 @@ online world of games, chat and adventure. </p>
 <div align="center">
 <table background="${server_url}/images/invite/enter_whirled.jpg" width="567" height="94">
 <tr><td style="padding-top: 20px; padding-left: 35px">
-<font color="#3b86b0"><b><a href="${server_url}#me-i_${invite_id}">${server_url}#me-i_${invite_id}</a></b></font>
+<font color="#3b86b0"><b><a href="${server_url}go/me-i_${invite_id}">${server_url}go/me-i_${invite_id}</a></b></font>
 </td></tr>
 </table>
 
@@ -60,7 +60,7 @@ online world of games, chat and adventure. </p>
 <p style="color: #4B718A"> If you would prefer not to receive invitations to Whirled from your friends,
 please visit this link:</p>
 
-<p><a style="color: #4B718A" href="${server_url}#account-optout_${invite_id}">${server_url}#account-optout_${invite_id}</a></p>
+<p><a style="color: #4B718A" href="${server_url}go/account-optout_${invite_id}">${server_url}go/account-optout_${invite_id}</a></p>
 #else
 <p style="color: #4B718A">This invitation is a result of this email address having been submitted at
 http://www.threerings.net/whirled/ for inclusion in Whirled testing. If you've
